k8s-manifests/backend-deployment.yaml
#apiVersion: apps/v1
#kind: Deployment
#metadata:
  #name: backend-deployment
  #namespace: my-app-namespace
#spec:
  #replicas: 1
  #selector:
    #matchLabels:
      #app: app1
  #template:
    #metadata:
      #labels:
        #app: app1
        #function: backend
    #spec:
      #containers:
      #- name: backend
        #image: holadmex/3-tier-web-architecture-backend:latest
        #ports:
        #- containerPort: 5000
        #env:
        #- name: BACKEND_URL
          #valueFrom:
            #configMapKeyRef:
              #name: app-config
              #key: BACKEND_URL
        #- name: DATABASE_URL
          #valueFrom:
            #configMapKeyRef:
              #name: app-config
              #key: DATABASE_URL
        #resources:
          #requests:
            #memory: "512Mi"
            #cpu: "500m"
          ##limits:
            ##memory: "2Mi"
            ##cpu: "1"




apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: my-app-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
        function: backend
    spec:
      containers:
      - name: backend
        image: holadmex/3-tier-web-architecture-backend:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "1Mi"
            cpu: "500m"
          #limits:
            #memory: "2Gi"
            #cpu: "1"
