k8s-manifests/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: dev
spec:
  selector:
    app: postgres-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
