k8s-manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
spec:
  type: NodePort
  ports:
  - port: 80          
    targetPort: 80     
    protocol: TCP
    nodePort: 32080    
  selector:
    app: frontend



#apiVersion: v1
#kind: Service
#metadata:
  #name: frontend-service
  #namespace: my-app-namespace
  #annotations:
    #service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    #service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    #service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:REGION:ACCOUNT_ID:certificate/CERTIFICATE_ID
    #service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "60"
#spec:
  #type: LoadBalancer
  #ports:
    #- port: 80
      #targetPort: 80
      #protocol: TCP
    #- port: 443
      #targetPort: 443
      #protocol: TCP
  #selector:
    #app: app1
